--- a/devblog.html
+++ b/devblog.html
@@ -1,3 +1,9 @@
-﻿{% for post in site.categories.devblog %}
+﻿---
+layout: page
+permalink: /devblog/
+title: Dev Blog (games)
+---
+
+{% for post in site.categories.devblog %}
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
