--- a/general-dev.html
+++ b/general-dev.html
@@ -1,3 +1,9 @@
-﻿{% for post in site.categories.generaldev %}
+﻿---
+layout: page
+permalink: /general-dev/
+title: General Dev
+---
+
+{% for post in site.categories.generaldev %}
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
