Remove about, fix category

--- a/general-dev.html
+++ b/general-dev.html
@@ -4,7 +4,7 @@ permalink: /general-dev/
 title: General Dev
 ---
 
-{% unless post.category == "photo"%}
+{% unless post.category == "generaldev"%}
     {% comment %} List posts... {% endcomment %}
 {% endunless %}
 
