--- a/general-dev.html
+++ b/general-dev.html
@@ -1,10 +1,9 @@
 ---
-layout: home
+layout: page
 permalink: /general-dev/
 title: General Dev
 ---
 
-{% unless post.category == "generaldev"%}
-    {% comment %} List posts... {% endcomment %}
-{% endunless %}
-
+{% for post in site.categories.generaldev %}
+ <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
+{% endfor %}
